<resources>
    <string name="app_name">Obstacle Car Game</string>
    <string name="game_title">Obstacle Racing Game</string>
    <string name="high_score_format">High Score: %1$d</string>
    <string name="start_game">Start Game</string>
    <string name="instructions">Avoid obstacles by moving your car left and right.\nYou have 3 lives. Game continues after all lives are lost.</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="score_format">Score: %1$d</string>
    <string name="lives_format">Lives: %1$d</string>
    <string name="player_car">Player Car</string>
    <string name="crash_message">Crash! Lives left: %1$d</string>
    <string name="game_over_message">Game Over! Final Score: %1$d</string>
    <string name="menu_title">Select Game Mode</string>
    <string name="button_mode">Button Controls</string>
    <string name="sensor_mode">Tilt Controls</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_fast">Fast</string>
    <string name="view_high_scores">View High Scores</string>
    <string name="distance_format">Distance: %1$d m</string>
    <string name="coin_collected">Coin!</string>
</resources>